--- a/dailychallenge.css
+++ b/dailychallenge.css
@@ -1,22 +1,36 @@
+body {
+    text-align: center;
+    background-color: rgb(233, 215, 217);
+    margin: 50px;
+}
+
+img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+
 p {
     color: #4343ab;
-    font-family: sans-serif;
-    text-align: center;
-  }
-  h1 {
+    font-family: 'Oswald';
+}
+
+h1 {
     color: #4343ab;
-    font-family: sans-serif;
-    text-align: center;
-  }
-  a {
+    font-family: 'Fira Sans';
+}
+a {
     color: rgb(167, 1, 78);
     text-decoration: unset;
-  }
+}
 
-  a:hover {
+a:hover {
     text-decoration: underline;
-  }
+}
 
-  #today-challenge {
-      color: rgb(170, 96, 83);
-  }
+#today-challenge {
+    color: rgb(170, 96, 83);
+    font-weight: bold;
+    font-size: 25px;
+}
+
