--- a/dailychallenge.css
+++ b/dailychallenge.css
@@ -19,6 +19,7 @@ h1 {
     color: #4343ab;
     font-family: 'Fira Sans';
 }
+
 a {
     color: rgb(167, 1, 78);
     text-decoration: unset;
@@ -32,5 +33,9 @@ a:hover {
     color: rgb(170, 96, 83);
     font-weight: bold;
     font-size: 25px;
+}
+
+li {
+    list-style: none;
 }
 
