--- a/shared.css
+++ b/shared.css
@@ -20,7 +20,7 @@ h1 {
     font-family: 'Fira Sans';
 }
 a {
-    color: rgb(167, 1, 78);
+    color: white;
     text-decoration: unset;
 }
 
@@ -32,5 +32,13 @@ a:hover {
     color: rgb(170, 96, 83);
     font-weight: bold;
     font-size: 25px;
+}
+
+/* #description {
+    margin-bottom: 36px;
+} */
+
+header p {
+    margin-bottom: 36px;
 }
 
