--- a/weekly-challenge.css
+++ b/weekly-challenge.css
@@ -1,25 +1,42 @@
+
 h1 {
     font-family: 'Fira Sans';
-    color: rgb(17, 123, 79);
+    color: rgb(71, 62, 62);
+    margin: 12px 0px;
 }
 
-p {
-    font-family: Georgia;
-    color: rgb(23, 167, 34);
+h2 {
+    color: rgb(78,13,5);
+    font-family: 'Oswald';
+}
+
+
+li {
+    margin: 21px;
+    list-style: none;
+    background-color: rgba(65, 65, 13);
+    padding: 12px;
+    border-radius: 4px;
+    border:3px solid rgb(23, 167, 34)
 }
 
 a {
-    color: salmon;
+    padding: 12px 48px;
+    background-color: rgb(178, 1, 79) ;
     font-family: 'Oswald';
     text-decoration: unset;
+    border-radius: 4px;
+    font-size: 24px;
 }
 
 a:hover {
-    text-decoration: underline;
+    background-color: rgb(180,12,90);
+    text-decoration: none;
 }
 
-table {
-    width: 100%;
+main p {
+    margin: 12px;
+    color: white;
 }
 
 body {
